# magum

./: Cargo.toml
.github/workflows/: build.yml
crates/client/: Cargo.toml  GithubPagesTrunk.toml  index.html
crates/client/src/: animation.rs  camera.rs  collision.rs  combat.rs  fx.rs  hero.rs  main.rs  player.rs  tileset.rs
crates/client/src/content/: dummy.rs  mod.rs
crates/client/src/core/: damage.rs  health.rs  mod.rs
crates/client/src/player/: animation.rs  camera.rs  combat.rs  locomotion.rs  mod.rs
