[package]
name = "magum"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.19.0"
bevy_tweening = "0.8.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
hashbrown = "0.14.1"
lazy_static = "1.4.0"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"
