[package]
name = "magum"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.11"
bevy-inspector-egui = "0.19.0"
bevy_rapier2d = { version = "*", features = [ "simd-stable", "debug-render-2d" ] }
console_error_panic_hook = "0.1.7"
hashbrown = "0.14.1"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.87"

